kubernetes/enable-cloud/enable-webapp-design/enable-webapp-design-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enable-webapp-design-ingress
  namespace: enable
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: design.cyberrytechnologies.nl
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: enable-webapp-design-service
            port:
              number: 80
